--- a/services/web/src/index.html
+++ b/services/web/src/index.html
@@ -9,13 +9,13 @@
     />
     <title><%= APP_NAME %></title>
 
-    <% if (GTM_CONTAINER_ID) { %> <%= require('utils/analytics/head.html') %> <%
-    } %>
+    <% if (GTM_CONTAINER_ID) { %> <%= require('utils/analytics/head.html') %> <% }
+    %>
     <!--env:conf-->
   </head>
   <body>
     <div id="root"></div>
-    <% if (GTM_CONTAINER_ID) { %> <%= require('utils/analytics/body.html') %> <%
-    } %>
+    <% if (GTM_CONTAINER_ID) { %> <%= require('utils/analytics/body.html') %> <% }
+    %>
   </body>
 </html>
